Сделала окно входа

--- a/registration.html
+++ b/registration.html
@@ -3,8 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Registration</title>
+    <link rel="stylesheet" href="style_registration.css" type="text/css"/>
 </head>
 <body>
-Проба
+
+<div class="container">
+    <div class="info">
+        <h3 class="title2">Регистрация</h3>
+
+        <form action="" class="window">
+            <div class="info2-form">
+                <input type="text" class="info2-input" placeholder="Имя и фамилия">
+                <input type="text" class="info2-input" placeholder="Дата рождения">
+                <input type="text" class="info2-input" placeholder="Город">
+                <input type="text" class="info2-input" placeholder="Телефон">
+                <input type="text" class="info2-input" placeholder="Почта">
+                <input type="password" class="info2-input" placeholder="Пароль">
+                <input type="password" class="info2-input" placeholder="Повторите пароль">
+            </div>
+            <div class="text">
+                <input type="checkbox" name="entrance"/>Я согласен(а) с условиями....
+            </div>
+            <button class="button" type="button">Зарегистрироваться</button>
+        </form>
+
+    </div>
+
+</div>
+
 </body>
 </html>
