Добавила кнопку "Сообщения"

--- a/home.html
+++ b/home.html
@@ -39,6 +39,10 @@
         <button onclick="myFunction()" class="announcement">Разместить объявление</button>
     </div>
 
+    <div class="button_message">
+        <button onclick="myFunction()" class="message">Сообщения</button>
+    </div>
+
     <div class="button_profile">
         <button onclick="myFunction()" class="profile">Профиль</button>
     </div>
